# bytomancer-aoc-template

./: .env.example  .gitignore  Cargo.toml  README.md  bacon.toml  flake.nix
src/: func_map.rs  generator.rs  input.rs  main.rs  prelude.rs
src/solutions/: d00s1.rs  d00s2.rs  mod.rs  solutions.rs
