[package]
name = "bytomancer-aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.34.0"
color-eyre = "0.6.2"
colored = "2.0.4"
dotenv = "0.15.0"
futures = "0.3.31"
num = "0.4.1"
raylib = "5.0.2"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["cookies"] }
tokio = { version = "1.34", features = ["full"] }

